// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Render must match dismissable() 1`] = `
<div
  className="p-1"
>
  <div
    className="Toast"
  >
    <span
      className="Toast-icon"
    >
      <mock-file
        aria-hidden="true"
        aria-label={null}
        className="octicon"
        height={16}
        role="img"
        style={
          Object {
            "display": "inline-block",
            "fill": "currentColor",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      />
    </span>
    <span
      className="Toast-content"
    >
      This toast is dismissable.
    </span>
    <button
      className="Toast-dismissButton"
      onClick={[Function]}
      type="button"
    >
      <mock-file
        aria-hidden="true"
        aria-label={null}
        className="octicon"
        height={16}
        role="img"
        style={
          Object {
            "display": "inline-block",
            "fill": "currentColor",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      />
    </button>
  </div>
</div>
`;

exports[`<Button /> Render must match error() 1`] = `
<div
  className="p-1"
>
  <div
    className="Toast Toast--error"
  >
    <span
      className="Toast-icon"
    >
      <mock-file
        aria-hidden="true"
        aria-label={null}
        className="octicon"
        height={16}
        role="img"
        style={
          Object {
            "display": "inline-block",
            "fill": "currentColor",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      />
    </span>
    <span
      className="Toast-content"
    >
      Error message goes here
    </span>
  </div>
</div>
`;

exports[`<Button /> Render must match info() 1`] = `
<div
  className="p-1"
>
  <div
    className="Toast"
  >
    <span
      className="Toast-icon"
    >
      <mock-file
        aria-hidden="true"
        aria-label={null}
        className="octicon"
        height={16}
        role="img"
        style={
          Object {
            "display": "inline-block",
            "fill": "currentColor",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      />
    </span>
    <span
      className="Toast-content"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.Aenean massa. Cum sociis natoquepenatibus et ma
    </span>
  </div>
</div>
`;

exports[`<Button /> Render must match success() 1`] = `
<div
  className="p-1"
>
  <div
    className="Toast Toast--success"
  >
    <span
      className="Toast-icon"
    >
      <mock-file
        aria-hidden="true"
        aria-label={null}
        className="octicon"
        height={16}
        role="img"
        style={
          Object {
            "display": "inline-block",
            "fill": "currentColor",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      />
    </span>
    <span
      className="Toast-content"
    >
      Success message goes here
    </span>
  </div>
</div>
`;

exports[`<Button /> Render must match warning() 1`] = `
<div
  className="p-1"
>
  <div
    className="Toast Toast--warning"
  >
    <span
      className="Toast-icon"
    >
      <mock-file
        aria-hidden="true"
        aria-label={null}
        className="octicon"
        height={16}
        role="img"
        style={
          Object {
            "display": "inline-block",
            "fill": "currentColor",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      />
    </span>
    <span
      className="Toast-content"
    >
      Warning message goes here
    </span>
  </div>
</div>
`;
